fix text alignment on event CTA

--- a/src/components/NextEventCTA.scss
+++ b/src/components/NextEventCTA.scss
@@ -8,6 +8,7 @@
 }
 
 .NextEventCTA {
+  text-align: left;
   margin: auto;
   width: fit-content;
   display: block;
